# drill

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
drill-client/: Cargo.toml
drill-client/src/: args.rs  main.rs
drill-proto/: Cargo.toml
drill-proto/src/: lib.rs
drill-server/: Cargo.toml
drill-server/src/: config.rs  event.rs  main.rs  state.rs  util.rs
drill-server/src/auth/: ao.rs  dynamic.rs  mod.rs
src/: main.rs
