[package]
name = "drill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
futures-util = { version = "0.3", default-features = false }
httparse = "1.8"
log = "0.4"
nadylib = { git = "https://github.com/Nadybot/nadylib.git", default-features = false, features = ["account-management", "async"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
tokio-websockets = { version = "0.3", default-features = false, features = ["server", "sha1_smol"] }
uuid = { version = "1.3", features = ["v4"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
