[package]
name = "drill-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "help", "std", "usage"] }
dashmap = "5.4"
drill-proto = { path = "../drill-proto" }
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
fastrand = "1.9"
futures-util = { version = "0.3", default-features = false }
httparse = "1.8"
libc = "0.2"
log = "0.4"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-websockets = { version = "0.3", default-features = false, features = ["server", "sha1_smol"] }
uuid = { version = "1.3", features = ["v4"] }

# Required for AO tell authentication
nadylib = { git = "https://github.com/Nadybot/nadylib.git", default-features = false, features = ["account-management", "async"], optional = true }

# Required for authentication via dynamic HTTP backend
hyper = { version = "0.14", default-features = false, features = ["http1", "client", "runtime", "tcp"], optional = true }
hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "tokio-runtime", "webpki-roots"], optional = true }

[features]
ao = ["nadylib"]
dynamic = ["hyper", "hyper-rustls"]
