[package]
name = "drill-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = { version = "4", default-features = false, features = ["derive", "help", "std", "usage"] }
dashmap = "5.4"
drill-proto = { path = "../drill-proto" }
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
fastrand = "2"
futures-util = { version = "0.3", default-features = false }
httparse = "1.8"
libc = "0.2"
log = "0.4"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-websockets = { version = "0.7", default-features = false, features = ["server", "sha1_smol"] }
uuid = { version = "1.3", features = ["v4"] }

# Required for AO tell authentication
nadylib = { git = "https://github.com/Nadybot/nadylib.git", default-features = false, features = ["account-management", "async"], optional = true }

# Required for authentication via dynamic HTTP backend
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", default-features = false, optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["http1", "client-legacy"], optional = true }
hyper-rustls = { version = "0.26", default-features = false, features = ["http1", "webpki-roots"], optional = true }

[features]
ao = ["nadylib"]
dynamic = ["http-body-util", "hyper", "hyper-util", "hyper-rustls"]
